# ha-smart-sprinkler-control

./: .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  DEVELOPMENT.md  LICENSE  README.md  docker-compose.dev.yml  hacs.json  info.md  pyproject.toml  pytest.ini  smart-sprinkler-control-panel.js
.github/workflows/: validate.yaml
custom_components/smart_sprinkler_control/: __init__.py  config_flow.py  const.py  manifest.json  sensor.py  services.yaml  strings.json
custom_components/smart_sprinkler_control/api/: __init__.py  http.py  precipitation.py
custom_components/smart_sprinkler_control/frontend/: .eslintrc.js  __init__.py  package.json  panel.py  rollup.config.js
custom_components/smart_sprinkler_control/frontend/src/: constants.js  data-manager.js  main.js  modals.js  panel.js  rain-chart.js  schedules.js  service-client.js  styles.js  zone-cards.js
custom_components/smart_sprinkler_control/frontend/src/modules/: DataManager.js  ServiceClient.js
custom_components/smart_sprinkler_control/frontend/src/utils/: Constants.js
custom_components/smart_sprinkler_control/models/: zone.py
custom_components/smart_sprinkler_control/services/: __init__.py  schedule_services.py  system_services.py  weather_services.py  zone_services.py
custom_components/smart_sprinkler_control/translations/: en.json
scripts/: setup_dev.sh
tests/: test_precipitation_discovery.py  test_precipitation_timezone.py  test_rain_gating.py  test_schedule_persistence.py  test_zone_reconfigure.py
