[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ha-smart-sprinkler-control"
version = "2025.1.0"
description = "Professional Home Assistant sprinkler control integration with Zero Sensor Pollution Architecture"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Joseph Sugamele", email = "jsugamele@gmail.com"}
]
keywords = ["homeassistant", "sprinkler", "irrigation", "watering", "automation", "integration"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Home Automation",
]
requires-python = ">=3.11"
dependencies = [
    "homeassistant>=2024.8.0",
]

[project.urls]
Homepage = "https://github.com/ccsliinc/ha-smart-sprinkler-control"
Documentation = "https://github.com/ccsliinc/ha-smart-sprinkler-control/blob/main/README.md"
Repository = "https://github.com/ccsliinc/ha-smart-sprinkler-control"
"Bug Reports" = "https://github.com/ccsliinc/ha-smart-sprinkler-control/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-homeassistant-custom-component>=0.13.0",
    "pre-commit>=3.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    "bandit>=1.7.0",
    "safety>=2.0.0",
    "vulture>=2.0.0",
]

[tool.black]
line-length = 88
target-version = ["py311"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["custom_components"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
show_error_codes = true

[tool.pytest.ini_options]
testpaths = ["tests"]
norecursedirs = [".git", "testing_config"]

[tool.coverage.run]
source = ["custom_components/smart_sprinkler_control"]
omit = [
    "tests/*",
    "venv/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
]

[tool.bandit]
exclude_dirs = ["tests", "venv"]
skips = ["B101"]  # Skip assert_used test

[tool.vulture]
# Paths Vulture scans. The pre-commit hook sets pass_filenames: false and
# expects the scan targets here (not on the command line).
paths = ["custom_components"]
exclude = ["venv/", "build/", "dist/", "tests/"]
ignore_decorators = ["@register", "@callback", "@staticmethod", "@property"]
# Home Assistant calls many symbols dynamically (entry points like
# async_setup_entry, HomeAssistantView class attrs, config-flow steps) and the
# const.py names form the public service/attribute contract consumed by
# services.yaml and the frontend JS by string. All of those surface at
# Vulture's 60% bucket as false positives, so require >60% confidence to keep
# the hook actionable without deleting live, framework-driven code.
min_confidence = 70
